# Solana-Perpeutal-Aggregator

./: .gitignore  Anchor.toml  Cargo.toml
app/: depsu25CbjXgtEa479LgEu28vg81AE34KCuDAZ5XQsj.json  hirj1GtaQ6zXM196vuDySqqhD868mghum53FpfzP2N7.json  id.json  package-lock.json  package.json
app/src/: index.ts
programs/aggregator/: Cargo.toml
programs/aggregator/src/: lib.rs
programs/perpetual_cpi/: Cargo.toml  perpetuals.json
programs/perpetual_cpi/src/: lib.rs
programs/presale_cpi/: Cargo.toml  presale.json
programs/presale_cpi/src/: lib.rs
tests/: cpi-call.ts
