[package]
name = "perpetual_aggregator"
version = "0.1.0"
description = "Perpetual Aggregator"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "perpetual_aggregator"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
perpetual_cpi = { version = "0.1.0", path = "../perpetual_cpi" }
presale_cpi = { version = "0.1.0", path = "../presale_cpi" }
anchor-lang = ">=0.20"
