[package]
name = "perpetual_cpi"
version = "0.1.0"
description = "Perpetual cpi"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "perpetual_cpi"

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-gen = { version = "0.3.0", path = "../../crates/anchor-gen" }
anchor-lang = ">=0.20"
